ionos/dome-wallet/wallet-data/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: wallet-data
  name: wallet-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: wallet-data
      app.kubernetes.io/name: wallet-data
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: wallet-data
        app.kubernetes.io/name: wallet-data
    spec:
      containers:
      - name: wallet-data
        image: in2kizuna/wallet-data:v2.0.0
        imagePullPolicy: Always
