ionos/dome-wallet/wallet-data/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-data
spec:
  ports:
  - name: wallet-data
    port: 8080
  selector:
    app.kubernetes.io/name: wallet-data
